src/snapshots/header_expected_open_bracket.txt
~~~META
description=
type=file
~~~SOURCE
module
~~~PROBLEMS
SYNTAX PROBLEM

Expected '[' in the module header.

module
Note: This is a parse error. Check your syntax.
~~~TOKENS
KwModule(1:1-1:7),EndOfFile(1:7-1:7),
~~~PARSE
(file (1:1-1:7)
	(malformed_header (1:7-1:7) "header_expected_open_square")
	(statements))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END